--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/jeet
+spring.datasource.username=root
+spring.datasource.password=root
+
+
+spring.jpa.show-sql=true
+
+management.endpoint.health.show-details=always
+
 
