--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/vishwas
+spring.datasource.url=jdbc:mysql://localhost:3306/blogging
 spring.datasource.password=root
 spring.datasource.username=root
