Configured the application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,17 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/blogging
 spring.datasource.password=root
 spring.datasource.username=root
+
+
+#Log Levels
+logging.level.org.springframework=ERROR
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.com.training.bloggingsite=INFO
+
+# Log to File
+logging.file.name=app.log
+
+# Log Patters
+logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
