Added posteditor entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.level.org.springframework=ERROR
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.com.training.bloggingsite=INFO
-
+logging.level.sql=trace
 # Log Patters
 logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
