--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/blogging
-spring.datasource.password=root
+#spring.datasource.password=root
 spring.datasource.username=root
+spring.datasource.password=root@123
 
 
 #Log Levels
