--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,15 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- This dependency is used for integration of Spring Security -->
+<!--         This dependency is used for integration of Spring Security-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
         </dependency>
 
         <!-- This dependency is used for the support of Thymeleaf -->
@@ -45,13 +50,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <!-- This dependency is used for using the Model-Mapper to clone two classes-->
-        <dependency>
-            <groupId>org.modelmapper</groupId>
-            <artifactId>modelmapper</artifactId>
-            <version>3.1.1</version>
         </dependency>
 
         <!-- This dependency automatically refreshes the whole project -->
@@ -76,6 +74,7 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- This dependency helps is validation of the incoming data -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
