--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/blogging
-spring.datasource.password=root
 spring.datasource.username=root
-#spring.datasource.password=root@123
+#  password for Dharmik.
+spring.datasource.password=root@123
+#spring.datasource.password=root
 
 #Logger Content
 logging.file.name=application.log
