--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/blogging
 spring.datasource.username=root
 #  password for Dharmik.
-spring.datasource.password=root@123
-#spring.datasource.password=root
+#spring.datasource.password=root@123
+spring.datasource.password=root
 
 #Logger Content
 logging.file.name=application.log
