Project Done final !!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,12 @@
-
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/blogging
 spring.datasource.username=root
-#  password for Dharmik.
-#spring.datasource.password=root@123
 spring.datasource.password=root
 
 #Logger Content
 logging.file.name=application.log
 logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
 
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
