--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/blogging
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=rootroot
 
 #Logger Content
 logging.file.name=application.log
