--- a/pom.xml
+++ b/pom.xml
@@ -60,11 +60,10 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- This dependency is used for integration of MySQL driver -->
+        <!-- This dependency is used for integration of PostgresSQL driver -->
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
         </dependency>
 
         <!-- This dependency as the Core for testing Spring Boot application -->
@@ -78,6 +77,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
