--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/blogging
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/blogging
+spring.datasource.username=postgres
 spring.datasource.password=root
+
+server.port=7070
 
 #Logger Content
 logging.file.name=application.log
