--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/blogging
-spring.datasource.username=root
-#  password for Dharmik.
-spring.datasource.password=root@123
+spring.datasource.username=postgres
+spring.datasource.password=Mind@123
+spring.datasource.url=jdbc:postgresql://localhost:5432/blogging
+spring.jpa.show-sql=true
 #spring.datasource.password=root
 
 server.port=7070
