Added CriteriaQueryHelper for Post. .and for all other Entities

--- a/pom.xml
+++ b/pom.xml
@@ -61,11 +61,21 @@
         </dependency>
 
         <!-- This dependency is used for integration of MySQL driver -->
+<!--        <dependency>-->
+<!--            <groupId>com.mysql</groupId>-->
+<!--            <artifactId>mysql-connector-j</artifactId>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+
+
 
         <!-- This dependency as the Core for testing Spring Boot application -->
         <dependency>
