--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/blogging
-spring.datasource.username=root
-#  password for Dharmik.
-#spring.datasource.password=root@123
-spring.datasource.password=root
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgre
+#spring.datasource.username=postgres
+##  password for Dharmik.
+##spring.datasource.password=root@123
+#spring.datasource.password=Mind@123
+spring.datasource.username=postgres
+spring.datasource.password=Mind@123
+spring.datasource.url=jdbc:postgresql://localhost:5432/Blogging
+
 
 #Logger Content
 logging.file.name=application.log
