--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=postgres
-spring.datasource.password=Mind@123
+spring.datasource.password=root
 spring.datasource.url=jdbc:postgresql://localhost:5432/blogging
-spring.jpa.show-sql=true
-#spring.datasource.password=root
+spring.jpa.properties.hibernate.default_schema=data
 
 server.port=7070
 
