criteria query added in comment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=Mind@123
 spring.datasource.url=jdbc:postgresql://localhost:5432/blogging
 spring.jpa.properties.hibernate.default_schema=data
 
