--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=postgres
-spring.datasource.password=Mind@123
+spring.datasource.password=root
 spring.datasource.url=jdbc:postgresql://localhost:5432/blogging
 spring.jpa.properties.hibernate.default_schema=data
 
@@ -11,7 +11,6 @@ server.port=7070
 logging.file.name=application.log
 logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
 
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
 
 
